--- a/style.css
+++ b/style.css
@@ -19,5 +19,41 @@
     height: 100%;
     background-color: rgb(0, 0, 0, 0.7);
     display: flex;
+    align-items: center;
+    flex-direction: column;
     color: #fff;
+}
+
+.title {
+    margin-top: 10px;
+    color: #fff;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.col {
+    margin-top: 10px;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.col div {
+    width: 250px;
+    text-align: center;
+}
+
+input {
+    width: 60%;
+    height: 50px;
+    color: gold;
+    background-color: rgb(0, 0, 0, 0.7);
+    border-color: transparent;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 30px;
+}
+
+label {
+    color: gold;
 }
